--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -9,23 +9,35 @@ This footer template is shared across all the pages.
         {{navigation type="secondary"}}
       </nav>
     {{/if}}
-    <nav class="m-footer-social">
-      {{#if @site.facebook}}
-        <a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener" aria-label="Facebook">
-          <span class="icon-facebook" aria-hidden="true"></span>
+
+    {{#if @custom.show_footer_links}}
+      <nav class="m-footer-social">
+        {{#if @site.facebook}}
+          <a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener" aria-label="Facebook">
+            <span class="icon-facebook" aria-hidden="true"></span>
+          </a>
+        {{/if}}
+        {{#if @site.twitter}}
+          <a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener" aria-label="Twitter">
+            <span class="icon-twitter" aria-hidden="true"></span>
+          </a>
+        {{/if}}
+        <a href="{{@site.url}}/rss" aria-label="RSS">
+          <span class="icon-rss" aria-hidden="true"></span>
         </a>
-      {{/if}}
-      {{#if @site.twitter}}
-        <a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener" aria-label="Twitter">
-          <span class="icon-twitter" aria-hidden="true"></span>
-        </a>
-      {{/if}}
-      <a href="{{@site.url}}/rss" aria-label="RSS">
-        <span class="icon-rss" aria-hidden="true"></span>
-      </a>
-    </nav>
+      </nav>
+    {{/if}}
     <p class="m-footer-copyright">
-      <span>{{@site.title}} &copy; {{date format="YYYY"}}</span>
+      
+      <span>
+        {{#if @custom.copyright_text_override}}
+		      {{@custom.copyright_text_override}}
+	      {{else}}
+		      {{@site.title}} &copy; {{date format="YYYY"}}
+	      {{/if}}
+      </span>
+        
+        
       <span>&nbsp; &bull; &nbsp;</span>
       <span>{{t "Published with"}} <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a></span>
     </p>
