--- a/post.hbs
+++ b/post.hbs
@@ -59,6 +59,7 @@ into the {body} of the default.hbs template --}}
             <div class="pos-relative js-post-content">
               <div class="m-share">
                 <div class="m-share__content js-sticky">
+                  {{#if @custom.show_social_links_in_posts}}
                   <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute='true'}}"
                     class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Facebook">
                     <span class="icon-facebook" aria-hidden="true"></span>
@@ -67,6 +68,7 @@ into the {body} of the default.hbs template --}}
                     class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Twitter">
                     <span class="icon-twitter" aria-hidden="true"></span>
                   </a>
+                  {{/if}}
                   <button class="m-icon-button filled in-share progress js-scrolltop" aria-label="{{t "Scroll to top"}}">
                     <span class="icon-arrow-top" aria-hidden="true"></span>
                     <svg aria-hidden="true">
